test/compile_fail/retired_program_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.Transform;
}
